[project]
name = "tag-content-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "rich-pixels>=3.0.1",
    "typer>=0.16.0",
]
